@@ -48,8 +48,13 @@
         <dependencies>
             <dependency>
                 <groupId>org.apache.activemq</groupId>
+                <artifactId>activemq-broker</artifactId>
+                <version>5.9.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.activemq</groupId>
                 <artifactId>activemq-spring</artifactId>
-                <version>5.9.0</version>
+                <version>5.9.1</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.camel</groupId>
@@ -597,8 +602,10 @@
                                             <maxMemorySize>256M</maxMemorySize>
                                             <maxStackSize>128M</maxStackSize>
                                             <extraArguments>
-                                                <extraArgument>-XX:+CMSClassUnloadingEnabled</extraArgument>
-                                                <extraArgument>-XX:+UseConcMarkSweepGC</extraArgument>
+                                                <extraArgument>-XX:+UseG1GC</extraArgument>
+                                                <extraArgument>-XX:MaxGCPauseMillis=50</extraArgument>
+                                                <extraArgument>-XX:ParallelGCThreads=4</extraArgument>
+                                                <extraArgument>-XX:ConcGCThreads=4</extraArgument>
                                                 <extraArgument>-Djava.net.preferIPv4Stack=true</extraArgument>
                                                 <extraArgument>-Djava.security.manager</extraArgument>
                                                 <extraArgument>-Djava.security.policy=conf/service/wrapper-service.policy</extraArgument>
